# pyhactool

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  _hactool.c  hactool.py  hactool.pyx  pyproject.toml  setup.py
.github/workflows/: pypi.yml  test-pypi.yml  try-build.yml
cmake/: UseCython.cmake
lib/: cJSON.pxd  extkeys.pxd  filepath.pxd  hfs0.pxd  nax0.pxd  nca.pxd  nca0_romfs.pxd  nso.pxd  packages.pxd  rsa.pxd  settings.pxd  sha.pxd  types.pxd  utils.pxd
src/: CMakeLists.txt  hactool.py
src/_hactool/: CMakeLists.txt  __init__.pyx  nca.pyx
src/_hactool/lib/: ConvertUTF.pxd  aes.pxd  kip.pxd  lz4.pxd  nca.pxd  npdm.pxd  pfs0.pxd  settings.pxd  xci.pxd
src/hactool/: CMakeLists.txt  __init__.py  cli.py
src/hactool/lib/: bktr.pxd  ivfc.pxd  pki.pxd  save.pxd
