[project]
name = "pyhactool"
authors = [ { "name" = "Karim Vergnes", "email" = "me@thesola.io" }
          , { "name" = "Michael Scire", "email" = "SciresM@gmail.com" }
          ]
license = { "file" = "LICENSE" }
readme = "README.md"
classifiers = [
    'Development Status :: 2 - Pre-Alpha',
    'Environment :: Console',
    'Intended Audience :: Developers',
    'Operating System :: MacOS :: MacOS X',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX :: Linux',
    'Programming Language :: C',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Topic :: Software Development :: Libraries',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Utilities',
]
urls = { "Source" = "https://github.com/Thesola10/pyhactool" }
dependencies = []
dynamic = [ "version", "description" ]

[build-system]
requires = ["cython", "py-build-cmake>=0.0.6", "mypy"]
build-backend = "py_build_cmake.build"

[project.scripts]
hactool = "hactool.cli:main"

[tool.py-build-cmake.module]
name = "hactool"
directory = "src"

[tool.py-build-cmake.sdist]
include = ["CMakeLists.txt", "src/*", "hactool/*", "cmake/*"]

[tool.py-build-cmake.cmake]
build_type = "Release"
source_path = "."
install_components = ["python_modules"]

# The `cl` compiler is missing features required to build hactool
[tool.py-build-cmake.windows.cmake]
generator = "MSYS Makefiles"
options = { "CMAKE_HOST_UNIX" = "ON" }
